--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@octokit/graphql": "^5.0.0",
+    "@octokit/graphql-schema": "^10.74.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
