--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@octokit/graphql-schema": "^10.74.1",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
